--- a/template.html
+++ b/template.html
@@ -14,8 +14,8 @@
 
 
   <!-- Scripts -->
-  <script type="text/javascript" src="js/mustache.min.js"></script>
-  <script type="text/javascript" src="js/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.js"></script>
 
   <script id="segmentacao-template" type="x-tmpl-mustache">
     <div id="caroussel-seg" class="owl-carousel owl-theme">
@@ -104,7 +104,7 @@
 
         var template = $('#segmentacao-template').html();
         Mustache.parse(template); // optional, speeds up future uses
-        var rendered = Mustache.render(template, data);
+        var rendered = Mustache.to_html(template, data);
         $('#segmentacao').html(rendered);
 
       });
